--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+main {
+  background-color: rgb(214, 214, 214);
+  padding: 6rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+section {
+  background-color: white;
+  min-width: 1442px;
+  min-height: 808px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btnsContainer {
+  background-color: #b86f52;
+  height: 188px;
+  width: 1200px;
+  border-radius: 94px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.selector {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+}
+.squigly {
+  width: 102px;
+  height: 10px;
+  background-color: black;
 }
 
-.App-link {
-  color: #61dafb;
+.msgContainer {
+  width: 1200px;
+  height: 400px;
+}
+.msg {
+  width: 800px;
+  height: 400px;
+  background-color: #b86f52;
+  border-radius: 40px;
+  padding: 40px;
+  line-height: 3.5rem;
+}
+.msg h3 {
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+.msg p {
+  font-size: 2.8rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.radio-label {
+  position: relative;
+}
+.radio-label img {
+  width: 180px;
+  height: 128px;
+  border: 2px solid #2d4668;
+  transition: all 0.4s ease-in-out;
+  border-radius: 64px;
+  /* controlling image CSS */
+}
+.radio-label:hover img {
+  opacity: 0.5;
+  cursor: pointer;
+  /* hover css */
+}
+.radio-label > input {
+  display: none;
+  /* getting rid of normal radio button */
+}
+.radio-label > input:checked + img {
+  border: 2px solid #c52026;
+  box-shadow: #000000 0px 14px 20px -10px;
+  transform: translate(0px, -10px);
+  opacity: 1;
 }
