--- a/src/App.css
+++ b/src/App.css
@@ -33,17 +33,17 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
 }
 .squigly {
-  width: 102px;
+  width: 100px;
   height: 10px;
-  background-color: black;
 }
 
 .msgContainer {
   width: 1200px;
   height: 400px;
+  display: flex;
+  justify-content: center;
 }
 .msg {
   width: 800px;
@@ -64,6 +64,7 @@ section {
 
 .radio-label {
   position: relative;
+  margin-top: 30px;
 }
 .radio-label img {
   width: 180px;
